--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -4,5 +4,9 @@
     "titleBar.inactiveForeground": "#000000CC",
     "titleBar.activeBackground": "#FFC600",
     "titleBar.inactiveBackground": "#FFC600CC"
+  },
+
+  "files.associations": {
+    "*.js": "typescriptreact"
   }
 }
