--- a/backend/package.json
+++ b/backend/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "the backend of sick fits",
   "scripts": {
-    "start": "nodemon -e js,graphql -x node src/index.js",
-    "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
+    "start": "nodemon -e js,graphql -x  node src/index.js",
+    "dev": "nodemon -e js,graphql -x  babel-node src/index.js",
     "test": "jest",
     "deploy": "prisma deploy --env-file variables.env"
   },
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "2.4.3",
     "cookie-parser": "^1.4.3",
@@ -32,5 +34,10 @@
     "presets": [
       "env"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5"
   }
 }
