--- a/frontend/.vscode/settings.json
+++ b/frontend/.vscode/settings.json
@@ -7,6 +7,10 @@
   },
 
   "files.associations": {
-    "*.js": "typescriptreact"
+    "*.js": "javascriptreact"
   }
+
+  // "files.associations": {
+  //   "*.js": "typescriptreact"
+  // }
 }
