--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,4 +1,5 @@
-endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: ${env:PRISMA_ENDPOINT}
+endpoint: https://eu1.prisma.sh/ali_khalil-a4d662/sliccck-fits/dev/sliccck-fits/dev
 datamodel: datamodel.graphql
 # secret: ${env: PRISMA_SECRET}
 hooks:
