--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.0",
+    "@apollo/react-ssr": "^3.1.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "apollo-boost": "^0.1.16",
